--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.19",
+    "baseline-browser-mapping": "^2.9.17",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "vite": "^7.1.5"
